5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1644_2445.log
== SUBMITION (2019-04-16 14:06:11) 
-- CODE:
escala =  input("qual a escala:")
vdatemperatura = int(input("valor da temperatura:"))

if (escalla == "C"):
	F = (((9/5)* vdatemperatura)+ 32)
	print(round(F,2))
else:
	C= (5/9)*(vdatemperatura - 32)
	print(round(C,2))
-- EXECUTION TIME:
0.135741
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 4, in <module>
    if (escalla == "C"):
NameError: name 'escalla' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:06:12) 
-- CODE:
escala =  input("qual a escala:")
vdatemperatura = int(input("valor da temperatura:"))

if (escalla == "C"):
	F = (((9/5)* vdatemperatura)+ 32)
	print(round(F,2))
else:
	C= (5/9)*(vdatemperatura - 32)
	print(round(C,2))
-- EXECUTION TIME:
0.20587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 4, in <module>
    if (escalla == "C"):
NameError: name 'escalla' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:06:12) 
-- CODE:
escala =  input("qual a escala:")
vdatemperatura = int(input("valor da temperatura:"))

if (escalla == "C"):
	F = (((9/5)* vdatemperatura)+ 32)
	print(round(F,2))
else:
	C= (5/9)*(vdatemperatura - 32)
	print(round(C,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (escalla == "C"):
NameError: name 'escalla' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:06:33) 
-- CODE:
escala =  input("qual a escala:")
vdatemperatura = int(input("valor da temperatura:"))

if (escala == "C"):
	F = (((9/5)* vdatemperatura)+ 32)
	print(round(F,2))
else:
	C= (5/9)*(vdatemperatura - 32)
	print(round(C,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:06:48) 
-- CODE:
escala =  input("qual a escala:")
vdatemperatura = int(input("valor da temperatura:"))

if (escala == "C"):
	F = (((9/5)* vdatemperatura)+ 32)
	print(round(F,2))
else:
	C= (5/9)*(vdatemperatura - 32)
	print(round(C,2))
-- EXECUTION TIME:
0.191484
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
